Added link to index page; broke out stylesheet.

--- a/cats.html
+++ b/cats.html
@@ -4,26 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=650px, initial-scale=1">
   <title>Sometimes Julian Writes</title>
-  <style>
-    h1 {
-      text-align: center;
-    }
-    body {
-      padding: 15px;
-      max-width: 650px;
-      margin: auto;
-      text-align: center;
-    }
-    p {
-      text-align: left;
-    }
-    img {
-      margin: 10px;
-      border: 2px solid gray;
-      height: 300px;
-      display: inline-block;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>  
   <h1>The Tale of the Prince and the Bear</h1>
@@ -170,6 +151,7 @@
   </p>
   <img src="images/CatsCute.jpg">
   
+  <hr>
   <p style="text-align: center">
     <i>Copyright &copy; 2016 Julian Lunger</i>
   </p>
