--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
+<!DOCTYPE html>
 <html>
-  <body>
-    <p>Welcome.</p>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=650px, initial-scale=1">
+  <title>Sometimes Julian Writes</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <h1>Sometimes Julian Writes</h1>
+  
+  <br>
+  
+  <a href="cats.html"><h3>The Tale of the Prince and the Bear</h3></a>
+  <h4>Published June 20th, 2016</h4>
+  
+  <hr>
+  <p style="text-align: center">
+    <i>Copyright &copy; 2016 Julian Lunger</i>
+  </p>
+</body>
 </html>
