Some mobile fixes. Images should probably be redone though.

--- a/cats.html
+++ b/cats.html
@@ -2,11 +2,16 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=650px, initial-scale=1">
+  <meta 
+      name="viewport" 
+      content="width=device-width, initial-scale=1"
+  >
   <title>Sometimes Julian Writes</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>  
+<body>
+  <a href="index.html"><i>Back to Home</i></a>
+
   <h1>The Tale of the Prince and the Bear</h1>
 
   <p>
@@ -78,7 +83,7 @@
   <img src="images/BearPawUp.jpg">
 
   <p>
-    Also, It turns out that white cats are not ideal if you wear dark clothing.
+    Also, it turns out that white cats are not ideal if you wear dark clothing.
   </p>
   <img src="images/PrinceOnBlackPants.jpg">
   
@@ -150,6 +155,10 @@
     to be an awesome pair of cats.
   </p>
   <img src="images/CatsCute.jpg">
+  
+  <br>
+
+  <a href="index.html"><i>Back to Home</i></a>
   
   <hr>
   <p style="text-align: center">
