--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=650px, initial-scale=1">
+  <meta 
+      name="viewport" 
+      content="width=device-width, initial-scale=1"
+  >
   <title>Sometimes Julian Writes</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
